--- a/source.css
+++ b/source.css
@@ -101,23 +101,23 @@ a:hover {
 }
 .myNamePanel{
 	background-color: rgba(0,0,0,0.75);
-	width: 50%;
-	left: 25%;
-	height: 250px;
+	width: 100%;
+	height: 100%;
 	opacity: 1;
 	padding-top: 0px;
 	position: relative;
 }
 .myName {
-    font-size: 100px;
-    height: 100px;
-    position: relative;
-    width: 100%;
-    text-align: center;
-    font-style: oblique;
-    color: #FFFFFF;
-    z-index: 1;
+	font-size: 100px;
+	height: 100px;
+	position: relative;
+	width: 100%;
+	text-align: center;
+	font-style: oblique;
+	color: #FFFFFF;
+	z-index: 1;
 	font-family: 'Oxygen', sans-serif;
+	padding-top: 200px;
 }
 .aboutMe {
 	width: 40%;
@@ -132,16 +132,16 @@ a:hover {
 	border: 1px solid #79CBD8;
 }
 .jobTitle {
-    font-size: 40px;
-    height: 100px;
-    position: relative;
-    width: 50%;
-    left: 25%;
-    top: 50px;
-    text-align: center;
-    font-style: oblique;
-    color: #FFFFFF;
-    z-index: 1;
+	font-size: 40px;
+	height: 100px;
+	position: relative;
+	width: 50%;
+	left: 25%;
+	text-align: center;
+	font-style: oblique;
+	color: #FFFFFF;
+	z-index: 1;
+	padding-top: 150px;
 }
 /*Top Section CSS End*/
 
@@ -336,7 +336,7 @@ a:hover {
 }
 
 @media (max-width:415px){
-	.bodyContainer{
+		.bodyContainer{
 		height: 1500px;
 	}
 /*NAVBAR Start*/
