--- a/source.css
+++ b/source.css
@@ -21,12 +21,12 @@ html,body
 .bodyContainerLAW {
 	width: 100%;
 	background-color: #132453;
-	height: 1400px;
+	height: 1500px;
 }
 .bodyContainerResume {
 	width: 100%;
 	background-color: #132453;
-	height: 1300px;
+	height: 1500px;
 }
 
 
@@ -359,6 +359,9 @@ a:hover {
 	}
 	.bodyContainerBTM{
 		height: 1800px;
+	}
+	.bodyContainerLAW{
+		height: 800px;
 	}
 /*NAVBAR Start*/
 	.header {
