--- a/source.css
+++ b/source.css
@@ -361,7 +361,7 @@ a:hover {
 		height: 1800px;
 	}
 	.bodyContainerLAW{
-		height: 800px;
+		height: 1750px;
 	}
 /*NAVBAR Start*/
 	.header {
@@ -441,6 +441,11 @@ a:hover {
 	.projectPageTitle{
 		height: 60px;
 		font-size: 30px;
+	}
+	.projectTrailer{
+		height: 300px;
+		width:100%;
+		left:0%;
 	}
 	.portfolioTitle{
 		height: 50px;
