--- a/source.css
+++ b/source.css
@@ -324,33 +324,32 @@ a:hover {
 	
 }
 .resumeTitle{
-    width: 100%;
-    height: 100px;
-    font-size: 75px;
-    color: #FFFFFF;
-    text-align: center;
-    position: relative;
-    top: 50px;
+	width: 100%;
+	height: 100px;
+	font-size: 75px;
+	color: #FFFFFF;
+	text-align: center;
+	position: relative;
+	padding-top: 50px;
 	
 }
 .resumeDownload{
-    width: 50%;
-    height: 50px;
-    font-size: 35px;
-    color: #3E9DE1;
-    text-align: center;
-    position: relative;
-    top: 50px;
-    display: inline-block;
-    left: 25%;
+	width: 50%;
+	height: 50px;
+	font-size: 35px;
+	color: #3E9DE1;
+	text-align: center;
+	position: relative;
+	display: inline-block;
+	left: 25%;
+	padding-top: 50px;
 }
 .resumeImage{
-    background-color: #7B2C2D;
-    width: 50%;
-    position: relative;
-    left: 25%;
-    height: 1200px;
-    top: 50px;
+	background-color: #7B2C2D;
+	width: 45%;
+	position: relative;
+	left: 27.5%;
+	height: 1200px;
 }
 
 @media (max-width:415px){
