--- a/source.css
+++ b/source.css
@@ -495,3 +495,63 @@ a:hover {
 	}
 	/*Rsume End*/
 }
+
+
+@media (max-width:1370px){
+	/*Project*/
+	.projectTextTitle{
+		font-size: 30px;
+	}
+	.projectTextBody{
+		font-size: 16px;
+	}
+	/*Portfolio*/
+	.projectTrailer{
+		width: 75%;
+		left: 12.5%;
+	}
+	.portfolioBox{
+		height: 230px;
+	}
+	.portfolioTextTitle{
+		font-size: 25px;
+	}
+	.portfolioTextBody{
+		font-size: 14px;
+	}
+	/*Resume*/
+	.resumeDownload{
+		width: 70%;
+		left: 20%;
+		font-size: 35px;
+	}
+	.resumeImage{
+		width: 70%;
+		left: 15%;
+	}
+}
+
+@media (max-width:1440px){
+	/*Project*/
+	.projectTextBody{
+		font-size: 18px;
+	}
+	/*Portfolio*/
+	.portfolioBox{
+		height: 240px;
+	}
+	.portfolioTextTitle{
+		font-size: 28px;
+	}
+	.portfolioTextBody{
+		font-size: 16px;
+	}
+	/*Resume*/
+	.resumeDownload{
+		font-size: 32px;
+	}
+	.resumeImage{
+		width: 60%;
+		left:20%;
+	}
+}
