--- a/source.css
+++ b/source.css
@@ -537,6 +537,10 @@ a:hover {
 		font-size: 18px;
 	}
 	/*Portfolio*/
+	.projectTrailer{
+		width: 70%;
+		left: 15%;
+	}
 	.portfolioBox{
 		height: 240px;
 	}
@@ -553,5 +557,67 @@ a:hover {
 	.resumeImage{
 		width: 60%;
 		left:20%;
+	}
+}
+
+@media (max-width:800px){
+	.bodyContainerBTM{
+		height:1400px;
+	}
+	.bodyContainerLAW{
+		height: 1200px;
+	}
+	/*Header*/
+	.header{
+		width: 100%;
+		left: 0%;
+	}
+	/*Front*/
+	.myName{
+		font-size: 75px;
+	}
+	.jobTitle{
+		font-size: 40px;
+	}
+	.aboutMe{
+		width: 75%;
+		left: 12.5%;
+	}
+	/*Project*/
+	.projectBox{
+		width: 100%;
+		left:0%;
+	}
+	.projectTextTitle{
+		font-size: 24px;
+	}
+	.projectTextBody{
+		font-size: 14px;
+	}
+	/*Project*/
+	.projectTrailer{
+		width: 100%;
+		left:0%;
+	}
+	.portfolioBox{
+		width:100%;
+		height: 180px;
+		left:0%;
+	}
+	.portfolioTextTitle{
+		font-size: 20px;
+	}
+	.portfolioTextBody{
+		font-size: 12px;
+	}
+	/*Resume*/
+	.resumeDownload{
+		width: 100%;
+		left:0%;
+		
+	}
+	.resumeImage{
+		width: 100%;
+		left:0%;
 	}
 }
