--- a/source.css
+++ b/source.css
@@ -58,7 +58,8 @@ a:hover {
 .horizontalList {
     font-size: 30px;
     display: inline-block;
-    width: 32%;
+    width: 32.84%;
+	height: 100%;
     text-align: center;
 }
 /* Dropdown Button */
