--- a/source.css
+++ b/source.css
@@ -67,6 +67,7 @@ a:hover {
     font-size: 30px;
     border: none;
     text-align: center;
+    height: 100%;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -74,6 +75,7 @@ a:hover {
     position: relative;
     display: inline-block;
     width: 32.9%;
+    height: 100%;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -85,6 +87,7 @@ a:hover {
     background-color: #288BE7;
     height: auto;
     width: 100%;
+    text-align: center;
 }
 
 /* Links inside the dropdown */
@@ -333,16 +336,27 @@ a:hover {
 	padding-top: 50px;
 	
 }
-.resumeDownload{
-	width: 50%;
-	height: 50px;
-	font-size: 35px;
-	color: #3E9DE1;
-	text-align: center;
-	position: relative;
-	display: inline-block;
-	left: 25%;
-	padding-top: 50px;
+.resumeDownloadPDF{
+    width: 30%;
+    height: 50px;
+    font-size: 35px;
+    color: #3E9DE1;
+    text-align: center;
+    position: relative;
+    display: inline-block;
+    padding-top: 50px;
+    left: 10%;
+}
+.resumeDownloadDOC{
+    width: 30%;
+    height: 50px;
+    font-size: 35px;
+    color: #3E9DE1;
+    text-align: center;
+    position: relative;
+    display: inline-block;
+    padding-top: 50px;
+    left: 30%;
 }
 .resumeImage{
 	background-color: #7B2C2D;
@@ -352,154 +366,14 @@ a:hover {
 	height: 1200px;
 }
 
-@media (max-width:415px){
-	.bodyContainerHome{
-		height: 1400px;
-	}
-	.bodyContainerBTM{
-		height: 1800px;
-	}
-	.bodyContainerLAW{
-		height: 1600px;
-	}
-	.bodyContainerResume{
-    height: 900px;
-	}
-/*NAVBAR Start*/
-	.header {
-    	width: 100%;
-    	height: 25px;
-    	left: 0%;
-}
-	.horizontalList {
-		width: 32.5%;
-    	font-size: 15px;
-}
-/* Dropdown Button */
-	.dropbtn {
-    	font-size: 15px;
-}
-	.dropdown-content {
-		font-size: 15px;
-}
 
-/*NAVBAR End*/
-
-/*Top Section Start*/
-	.myNamePanel{
-		height: 100%;
-		width: 100%;
-	}
-	.myName{
-		height: 50px;
-		font-size: 35px;
-		padding-top: 100px;
-	}
-	.jobTitle{
-		height: 50px;
-		width: 100%;
-		font-size: 25px;
-		left: 0%;
-		padding-top: 60px;
-	}
-	.bannerImage{
-		height: 300px;
-	}
-	.aboutMe{
-		width: 80%;
-		left: 10%;
-		font-size: 18px;
-	}
-/*Top Section End*/
-/*Project Section Start*/
-	.projectsSection{
-		font-size: 55px;
-		height: 800px;
-	}
-	.projectHeader{
-		font-size: 30px;
-		height: 50px;
-	}
-	.projectBox{
-		width: 100%;
-		left: 0%;
-	}
-	.projectIcon{
-		display: none
-	}
-	.projectText{
-		width: 100%;
-	}
-	.projectTextTitle{
-		font-size: 20px;
-	}
-	.projectTextBody{
-		font-size: 12px;
-	}
-	.projectTextLink{
-		font-size: 24px;
-	}
-	/*Project End*/
-	/*Portfolio Start*/
-	.projectPageTitle{
-		height: 60px;
-		font-size: 30px;
-	}
-	.projectTrailer{
-    	height: 300px;
-    	width: 90%;
-    	left: 5%;
-    	background-color: #000000;
-	}
-	.portfolioTitle{
-		height: 50px;
-	}
-	.portfolioBox{
-		height: 800px;
-		width: 100%;
-		left: 0%;
-	}
-	.portfolioVideo{
-		width: 100%;
-		height: 60%;
-		float: none;
-	}
-	.portfolioText{
-		height: 50%;
-		width:100%;
-	}
-	.portfolioTextTitle{
-		width:100%;
-		left:0%;
-		font-size: 30px;
-	}
-	.portfolioTextBody{
-		height: 90%;
-		font-size: 14px;
-	}
-	/*Portfolio End*/
-	/*Resume Start*/
-	.resumeSection{
-    height: 800px;
-	}
-	.resumeTitle{
-		font-size: 50px;
-	}
-	.resumeDownload{
-		width: 100%;
-		left: 0%;
-		font-size: 14px;
-	}
-	.resumeImage{
-		height: 600px;
-		width: 100%;
-		left:0%;
-	}
-	/*Resume End*/
-}
 
 
 @media (max-width:1370px){
+	/*Header*/
+	.horizontalList{
+		width: 32%;
+	}
 	/*Project*/
 	.projectTextTitle{
 		font-size: 30px;
@@ -576,25 +450,34 @@ a:hover {
 	}
 	/*Front*/
 	.myName{
-		font-size: 50px;
+		font-size: 70px;
+	}
+	.myNamePanel{
+		height: 500px;
 	}
 	.jobTitle{
-		font-size: 30px;
+		font-size: 40px;
+	}
+	.bannerImage{
+		height: 500px;
 	}
 	.aboutMe{
 		width: 75%;
+		height: 300px;
+		font-size: 22px;
 		left: 12.5%;
 	}
 	/*Project*/
 	.projectBox{
 		width: 100%;
+		height: 350px;
 		left:0%;
 	}
 	.projectTextTitle{
-		font-size: 22px;
+		font-size: 26px;
 	}
 	.projectTextBody{
-		font-size: 13px;
+		font-size: 14px;
 	}
 	/*Project*/
 	.projectTrailer{
@@ -622,4 +505,157 @@ a:hover {
 		width: 100%;
 		left:0%;
 	}
+}
+
+@media (max-width:415px){
+	.bodyContainerHome{
+		height: 1400px;
+	}
+	.bodyContainerBTM{
+		height: 1800px;
+	}
+	.bodyContainerLAW{
+		height: 1800px;
+	}
+	.bodyContainerResume{
+    	height: 900px;
+	}
+/*NAVBAR Start*/
+	.header{
+		height: 30px;
+	}
+	.horizontalList{
+		width: 32.6%;
+		font-size: 16px;
+	}
+	.dropbtn{
+		font-size: 16px;
+	}
+	.dropdown-content{
+		font-size: 14px;
+	}
+
+/*NAVBAR End*/
+
+/*Top Section Start*/
+	.myNamePanel{
+		height: 300px;
+		width: 100%;
+	}
+	.myName{
+    	font-size: 50px;
+		padding-top: 100px;
+	}
+	.jobTitle{
+		height: 50px;
+		width: 100%;
+		font-size: 30px;
+		left: 0%;
+		padding-top: 100px;
+	}
+	.bannerImage{
+		height: 300px;
+	}
+	.aboutMe{
+		width: 80%;
+		height: 200px;
+		left: 10%;
+		font-size: 18px;
+	}
+/*Top Section End*/
+/*Project Section Start*/
+	.projectsSection{
+		font-size: 65px;
+		height: 800px;
+	}
+	.projectHeader{
+		font-size: 30px;
+		height: 50px;
+	}
+	.projectBox{
+		width: 100%;
+		left: 0%;
+	}
+	.projectIcon{
+		width: 0%;
+	}
+	.projectText{
+		width: 100%;
+	}
+	.projectTextTitle{
+		height: 10%;
+		font-size: 22px;
+	}
+	.projectTextBody{
+		height: 75%;
+		font-size: 14px;
+	}
+	.projectTextLink{
+		height: 15%;
+		top:90%;
+		font-size: 24px;
+	}
+	/*Project End*/
+	/*Portfolio Start*/
+	.projectPageTitle{
+		height: 60px;
+		font-size: 40px;
+	}
+	.projectTrailer{
+    	height: 300px;
+    	width: 100%;
+    	left: 0%;
+    	background-color: #000000;
+	}
+	.portfolioTitle{
+		height: 50px;
+	}
+	.portfolioBox{
+		height: 600px;
+		width: 100%;
+		left: 0%;
+	}
+	.portfolioVideo{
+		width: 100%;
+		height: 38%;
+		float: none;
+	}
+	.portfolioText{
+		height: 62%;
+		width:100%;
+	}
+	.portfolioTextTitle{
+		height: 15%;
+		width:100%;
+		left:0%;
+		font-size: 30px;
+	}
+	.portfolioTextBody{
+		height: 85%;
+		font-size: 16px;
+	}
+	/*Portfolio End*/
+	/*Resume Start*/
+	.resumeSection{
+    height: 800px;
+	}
+	.resumeTitle{
+		font-size: 50px;
+	}
+	.resumeDownloadPDF{
+		width: 49%;
+		left: 0%;
+		font-size: 18px;
+	}
+	.resumeDownloadDOC{
+		width: 49%;
+		left: 0%;
+		font-size: 18px;
+	}
+	.resumeImage{
+		height: 600px;
+		width: 100%;
+		left:0%;
+	}
+	/*Resume End*/
 }
