--- a/source.css
+++ b/source.css
@@ -56,7 +56,7 @@ a:hover {
     height: 50px;
     position: fixed;
     left: 30%;
-    background-color: #288BE7;
+    background-color: #79CBD8;
     z-index: 99;
 	font-family: 'Oswald', sans-serif;
 }
@@ -89,7 +89,7 @@ a:hover {
     position: absolute;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    background-color: #288BE7;
+    background-color: #79CBD8;
     height: auto;
     width: 100%;
     text-align: center;
@@ -104,14 +104,16 @@ a:hover {
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #1365B2;}
-.horizontalList:hover {background-color: #1365B2;}
+.dropdown-content a:hover {
+    background-color: #1E606A;
+}
+.horizontalList:hover {background-color: #1E606A;}
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: block;}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    background-color: #1365B2;
+    background-color: #1E606A;
 }
 
 /*NAVBAR End*/
@@ -148,16 +150,32 @@ a:hover {
 	padding-top: 200px;
 }
 .aboutMe {
-    width: 40%;
-    height: 250px;
+    width: 50%;
+    height: 300px;
     position: relative;
-    left: 30%;
-    background-color: #7d132e;
+    left: 25%;
+}
+.aboutMeText{
+	height: 100%;
+	width: 70%;
+	position: relative;
+	background-color: #7d132e;
     text-align: center;
     font-size: 25px;
     color: #FFFFFF;
     font-family: 'Roboto Slab', serif;
     border: 1px solid #79CBD8;
+	float: right;
+}
+.picture{
+    width: 30%;
+    height: 100%;
+    position: relative;
+    background-color: #FF678D;
+	float: left;
+	clear: right;
+	display: block;
+	border: 1px solid #79CBD8;
 }
 .jobTitle {
 	font-size: 40px;
@@ -236,11 +254,27 @@ a:hover {
     border-bottom: 2px solid #79CBD8;
 }
 .projectTextLink {
+    width: 50%;
+    height: 10%;
+    color: #8FACF0;
+    font-size: 25px;
+    text-align: center;
+	float: left;
+}
+.projectTextLinkOnly {
     width: 100%;
     height: 10%;
     color: #8FACF0;
     font-size: 25px;
     text-align: center;
+}
+.projectStoreLink{
+    width: 50%;
+    height: 10%;
+    color: #8FACF0;
+    font-size: 25px;
+    text-align: center;
+	float: right;
 }
 
 .projectTextBody {
@@ -517,7 +551,7 @@ a:hover {
 
 @media (max-width:1200px){
 	/*Header*/
-	.aboutMe{
+	.aboutMeText{
 		font-size: 20px;
 	}
 	/*Project*/
@@ -566,10 +600,12 @@ a:hover {
 		height: 450px;
 	}
 	.aboutMe{
-		width: 75%;
-		height: 300px;
+		width: 100%;
+		height: 270px;
+		left: 0%;
+	}
+	.aboutMeText{
 		font-size: 22px;
-		left: 12.5%;
 	}
 	/*Project*/
 	.projectBox{
@@ -672,9 +708,9 @@ a:hover {
 		height: 300px;
 	}
 	.aboutMe{
-		width: 80%;
-		height: 200px;
-		left: 10%;
+		height: 220px;
+	}
+	.aboutMeText{
 		font-size: 16px;
 	}
 	/*Project*/
@@ -800,7 +836,10 @@ a:hover {
 		padding-top: 15px;
 	}
 	.aboutMe{
-		font-size: 15px;
+		height: 180px;
+	}
+	.aboutMeText{
+		font-size: 14px;
 	}
 	/*Project*/
 	.projectTextTitle{
