--- a/source.css
+++ b/source.css
@@ -121,16 +121,16 @@ a:hover {
 /*Top Section CSS Start*/
 
 .bannerImage {
-    background-image: url(Videos/BackgroundMix1.gif);
+    background-image: url(Videos/BackgroundMix3.gif);
     width: 100%;
     height: 650px;
     background-color: #422FE7;
     z-index: -5;
     opacity: 1;
-    background-size: cover;
+    background-size: 100% 100%;
 }
 .myNamePanel{
-	background-color: rgba(0,0,0,0.75);
+	background-color: rgba(0,0,0,0.5);
 	width: 100%;
 	height: 650px;
 	opacity: 1;
