--- a/source.css
+++ b/source.css
@@ -500,6 +500,14 @@ a:hover {
 	.myNamePanel{
 		height: 600px;
 	}
+	.aboutMe{
+		width: 75%;
+		left: 12.5%;
+	}
+	.contactInfo{
+		width: 75%;
+		left: 12.5%;
+	}
 	/*Project*/
 	.projectTextBody{
 		font-size: 18px;
@@ -603,6 +611,28 @@ a:hover {
 	}
 }
 
+@media (max-width:1000px){
+	.aboutMe{
+		width: 100%;
+		height: 270px;
+		left: 0%;
+	}
+	.aboutMeText{
+		font-size: 22px;
+	}
+	.contactInfo{
+		width: 100%;
+		left: 0%;
+	}
+	.contactInfoEmail{
+		font-size: 22px;
+		line-height: 350%;
+	}
+	.contactInfoLI{
+		font-size: 22px;
+		line-height: 350%;
+	}
+}
 @media (max-width:800px){
 	/*Containers*/
 	.bodyContainerBTM{
@@ -637,26 +667,6 @@ a:hover {
 	}
 	.bannerImage{
 		height: 450px;
-	}
-	.aboutMe{
-		width: 100%;
-		height: 270px;
-		left: 0%;
-	}
-	.aboutMeText{
-		font-size: 22px;
-	}
-	.contactInfo{
-		width: 100%;
-		left: 0%;
-	}
-	.contactInfoEmail{
-		font-size: 22px;
-		line-height: 350%;
-	}
-	.contactInfoLI{
-		font-size: 22px;
-		line-height: 350%;
 	}
 	/*Project*/
 	.projectBox{
