--- a/source.css
+++ b/source.css
@@ -10,7 +10,7 @@ html,body
 .bodyContainerHome {
     width: 100%;
     background-color: #091536;
-    height: 2500px;
+    height: 2000px;
     border-left-width: medium;
 }
 .bodyContainerBTM {
@@ -151,10 +151,15 @@ a:hover {
 }
 .aboutMe {
     width: 50%;
-    height: 300px;
     position: relative;
     left: 25%;
+    height: 300px;
 }
+.blankSpace100 {
+    height: 100px;
+    position: relative;
+}
+
 .aboutMeText{
 	height: 100%;
 	width: 70%;
@@ -223,12 +228,12 @@ a:hover {
 
 /*Projects Section CSS Start*/
 .projectsSection {
-	width: 100%;
-	height: 1000px;
-	text-align: center;
-	font-size: 75px;
-	color: #FFFFFF;
-	font-family: 'Prompt', sans-serif;
+    width: 100%;
+    height: 1300px;
+    text-align: center;
+    font-size: 75px;
+    color: #FFFFFF;
+    font-family: 'Prompt', sans-serif;
 }
 .projectTrailer{
     width: 50%;
