--- a/source.css
+++ b/source.css
@@ -10,7 +10,7 @@ html,body
 .bodyContainerHome {
     width: 100%;
     background-color: #091536;
-    height: 1500px;
+    height: 2000px;
     border-left-width: medium;
 }
 .bodyContainerBTM {
@@ -27,6 +27,11 @@ html,body
 	width: 100%;
 	background-color: #091536;
 	height: 1000px;
+}
+.bodyContainerBB {
+    background-color: #091536;
+    width: 100%;
+    height: 1500px;
 }
 .bodyContainerResume {
     width: 100%;
@@ -230,7 +235,7 @@ a:hover {
     width: 100%;
     height: 1300px;
     text-align: center;
-    font-size: 75px;
+    font-size: 100px;
     color: #FFFFFF;
     font-family: 'Prompt', sans-serif;
 }
@@ -457,6 +462,8 @@ a:hover {
 	height: 1200px;
 }
 
+
+
 @media (max-width:1680px){
 	/*Header*/
 	.bannerImage {
@@ -647,6 +654,9 @@ a:hover {
 	}
 	.bodyContainerUP{
 		height: 700px;
+	}
+	.bodyContainerBB {
+    	height: 1400px;
 	}
 	/*Header*/
 	.header{
